--- a/head.html
+++ b/head.html
@@ -24,6 +24,11 @@
             <span class=" glyphicon glyphicon-shopping-cart redColor" ></span>
             购物车<strong>0</strong>件</a>       
         </span>
-           
+
+        <button class="btn btn-success"> 按钮</button>
+        <button type="button" class="btn">原始样式按钮</button>
+        <button type="button" class="btn btn-default">默认按钮</button>
+        <button type="button" class="btn btn-primary">提交按钮</button>
+        <button type="button" class="btn btn-success"> 成功按钮</button>
 </nav>
 
