--- a/head.html
+++ b/head.html
@@ -30,5 +30,16 @@
         <button type="button" class="btn btn-default">默认按钮</button>
         <button type="button" class="btn btn-primary">提交按钮</button>
         <button type="button" class="btn btn-success"> 成功按钮</button>
+        <button type="button" class="btn btn-info">信息按钮</button>
+        <button type="button" class="btn btn-warning">警告按钮</button>
+        <button type="button" class="btn btn-danger">危险按钮</button>
+        <button type="button" class="btn btn-lg">大一点的按钮</button>
+        <button type="button" class="btn btn-sm">小一点的按钮</button>
+        <button type="button" class="btn btn-xs">最小的按钮</button>
+        <button type="button" class="btn btn-block">宽屏按钮</button>
+        <button type="button" class="btn activate">激活状态按钮</button>
+        <button type="button" class="btn disabled">领红包</button>
+        <button type="button" class="btn disabled btn-danger btn-xs">发红包</button>
+        
 </nav>
 
