--- a/boottrap-table.html
+++ b/boottrap-table.html
@@ -103,3 +103,79 @@
      </tr>
   </tbody>
 </table>
+
+<table class="table table-striped table-bordered table-hover  table-condensed">
+  <thead>
+     <th>头像</th>
+     <th>名字</th>
+     <th>HP</th>
+  </thead>
+  <tbody>
+     <tr>
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/gareen.png"/></td> 
+        <td>盖伦</td> 
+        <td>616</td> 
+     </tr>
+ <tr>
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/teemo.png"/></td> 
+        <td>提莫</td> 
+        <td>383</td> 
+     </tr>
+ <tr>
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/akali.png"/></td> 
+        <td>阿卡丽</td> 
+        <td>448</td> 
+     </tr>
+  </tbody>
+</table>
+
+<table class="table">
+  <thead>
+     <th>头像</th>
+     <th>名字</th>
+     <th>HP</th>
+  </thead>
+  <tbody>
+     <tr>
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/gareen.png"/></td> 
+        <td>盖伦</td> 
+        <td >616</td> 
+     </tr>
+ <tr>
+        <td ><img width="20px" src="http://how2j.cn/study/bootstrap/lol/teemo.png"/></td> 
+        <td >提莫</td> 
+        <td >383</td> 
+     </tr>
+ <tr  class="active">
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/akali.png"/></td> 
+        <td>阿卡丽</td> 
+        <td>448</td> 
+     </tr>
+  </tbody>
+</table>
+
+<table class="table">
+  <thead>
+     <th>头像</th>
+     <th>名字</th>
+     <th>HP</th>
+  </thead>
+  <tbody>
+     <tr>
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/gareen.png"/></td> 
+        <td>盖伦</td> 
+        <td >616</td> 
+     </tr>
+ <tr>
+        <td ><img width="20px" src="http://how2j.cn/study/bootstrap/lol/teemo.png"/></td> 
+        <td >提莫</td> 
+        <td >383</td> 
+     </tr>
+ <tr  class="success">
+        <td><img width="20px" src="http://how2j.cn/study/bootstrap/lol/akali.png"/></td> 
+        <td>阿卡丽</td> 
+        <td>448</td> 
+     </tr>
+  </tbody>
+</table>
+
