--- a/boottrap-table.html
+++ b/boottrap-table.html
@@ -229,5 +229,11 @@
   </tbody>
 </table>
 
+<img src="http://how2j.cn/example.gif" class="img-rounded">
+<img src="http://how2j.cn/example.gif" class="img-circle">
+<img src="http://how2j.cn/example.gif" class="img-thumbnail">
+
+
+
 
 
