--- a/boottrap-table.html
+++ b/boottrap-table.html
@@ -233,7 +233,15 @@
 <img src="http://how2j.cn/example.gif" class="img-circle">
 <img src="http://how2j.cn/example.gif" class="img-thumbnail">
 
-
-
-
+<input type="text" class="form-control" value="password">
+<br>
+<input type="password" class="form-control" value="password">
+<br>
+<textarea class="form-control">文本域</textarea>
+<br>
+<select class="form-control">
+<option>java</option>
+<option>html</option>
+<option>ios</option>
+</select>
 
