--- a/text.html
+++ b/text.html
@@ -20,3 +20,100 @@
 <p class="bg-info">请输入姓名</p>
 <p class="bg-warning">警告语</p>
 <p class="bg-danger">本操作会导致服务器挂掉</p>
+<button type="button" class="close" aria-hidden="true">
+      &times;
+   </button>
+   <br>
+   <span class="caret"></span>
+   <br>
+   <div class="pull-left"> 文字扶到左边</div>
+   <br>
+   <div class="pull-right">文字浮动到右边</div>
+   <br>
+   <div class="show">显示 </div>
+
+   <div class="show">显示1</div>
+<div class="hidden">隐藏</div>
+<div class="show">显示3</div>
+
+<br>
+<div class="show">显示1</div>
+<div class="invisible">隐藏</div>
+<div class="show">显示3</div>
+<style>
+   
+div.container div.row div {
+    margin:5px 0px;
+     
+}
+div.container div.row div {
+    background-color: lightgray;
+    border: 1px solid gray;
+    text-align:center;
+}
+</style>
+ 
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 ">一共12列</div>
+    </div>
+</div>
+ 
+<div class="container">
+    <div class="row">
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+        <div class="col-xs-1 ">1列</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4 ">占4列</div>
+        <div class="col-xs-4 ">占4列</div>
+        <div class="col-xs-4 ">占4列</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-6 ">一半</div>
+        <div class="col-xs-6 ">一半</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4 ">1/3</div>
+        <div class="col-xs-4 ">1/3</div>
+        <div class="col-xs-4 ">1/3</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3 ">1/4</div>
+        <div class="col-xs-3 ">1/4</div>
+        <div class="col-xs-3 ">1/4</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-6 ">一半</div>
+        <div class="col-xs-6 ">一半</div>
+    </div>
+</div>
+ 
+<div class="container">
+    <div class="row">
+        <div class="col-xs-8 ">8格</div>
+        <div class="col-xs-6 ">6格</div>
+    </div>
+</div>
+
+<span class="glyphicon glyphicon-asterish"></span>
