--- a/icon.html
+++ b/icon.html
@@ -7,5 +7,8 @@
 <br>
 <span class="glyphicon glyphicon-asterisk text-success"></span>
 
-
+<br>
+<a href="#nowhere">
+<span class="glyphicon glyphicon-asterisk"></span>超链接
+</a>
 
