--- a/icon.html
+++ b/icon.html
@@ -10,5 +10,11 @@
 <br>
 <a href="#nowhere">
 <span class="glyphicon glyphicon-asterisk"></span>超链接
-</a>
-
+</a><br>
+<button class="btn btn-primary btn-xs">
+<span class="glyphicon glyphicon-asterisk"></span>最小按钮
+</button>
+<br>
+<button class="btn btn-primary btn">
+<span class="glyphicon glyphicon-asterisk">按钮</span>
+</button>
