--- a/icon.html
+++ b/icon.html
@@ -37,3 +37,8 @@ http://192.168.1.189
 </ul>
 </div>
 <div style="height:100px"></div>
+<div class="btn-group" role="group" aria-label="web">
+<button type="button" class="btn btn-default">html</button>
+<button type="button" class="btn btn-default">css</button>
+<button type="button " class="btn btn-default">js</button>
+</div>
