--- a/icon.html
+++ b/icon.html
@@ -42,6 +42,60 @@ http://192.168.1.189
 <button type="button" class="btn btn-default">css</button>
 <button type="button " class="btn btn-default">js</button>
 </div>
+<br>
+<br>
 <div class="btn-toolbar" role="toolbar" aris-label="study">
 <div class="btn-group" role="group" aria -albel="java">
+<button type="button" class="btn bnt-default">基础</button>
+<button type="button" class="btn btn-default">中级</button>
+<button type="button" class ="btn btn-default">高级</button>
 
+<div class="btn-group" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
+ 
+<div class="btn-group" role="group" aria-label="framework">
+  <button type="button" class="btn btn-default">Hiber</button>
+  <button type="button" class="btn btn-default">Struts</button>
+  <button type="button" class="btn btn-default">Spring</button>
+</div>
+</div>
+
+<style>
+br{
+margin:20px;
+}
+</style>
+ 
+<div class="btn-group btn-group-lg" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
+<br>
+ 
+<div class="btn-group btn-group" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
+<br>
+<div class="btn-group btn-group-sm" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
+<br>
+<div class="btn-group btn-group-xs" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
+
+<div class="btn-group-vertical" role="group" aria-label="web">
+  <button type="button" class="btn btn-default">Html</button>
+  <button type="button" class="btn btn-default">Css</button>
+  <button type="button" class="btn btn-default">JS</button>
+</div>
